# sfml-skeleton

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: Entity.cpp  Entity.h  Game.cpp  Game.h  PaletteColors.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/Debug/: DebugText.cpp  DebugText.h  MousePositionsText.cpp  MousePositionsText.h
src/entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/states/: BaseState.cpp  BaseState.h  EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  InitialState.cpp  InitialState.h  MainMenuState.cpp  MainMenuState.h  StateData.h
src/system/debug/: DebugSystem.cpp  DebugSystem.h  DebugText.cpp  DebugText.h  MousePositionsText.cpp  MousePositionsText.h
src/system/particle/: ParticleSystem.h
src/ui/: UI.cpp  UI.h
src/utils/: CommonStructs.h  Components.h  PaletteColors.h  TypeDefStructs.h
